--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "cSpell.words": [
+        "Bluehost",
+        "Contabo",
+        "DMARC",
+        "Godaddy",
+        "Ionos",
+        "Litespeed",
+        "Plesk"
+    ],
+    
 }
