--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,11 @@
         "Godaddy",
         "Ionos",
         "Litespeed",
-        "Plesk"
+        "Magento",
+        "Opencart",
+        "Plesk",
+        "Prestashop",
+        "Woocommerce"
     ],
     
 }
